<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="21dp"
                android:contentDescription="@string/imgLogin"
                app:srcCompat="@drawable/login"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/etEmailMP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="21dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#42A5F5" />

            <EditText
                android:id="@+id/etPasswordMP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnIngresarMP"
                app:cornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#496BB5"
                android:text="@string/Ingresar" />

            <Button
                android:id="@+id/btnRegistrarMP"
                app:cornerRadius="20dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#496BB5"
                android:text="@string/Registrar" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>